# phullstack-ai-marketing-platform

./: README.md
asset-processing-service/: .gitignore  Dockerfile  pyproject.toml
asset-processing-service/src/asset_processing_service/: api_client.py  config.py  job_processor.py  logger.py  main.py  media_processor.py  models.py
nextjs/: .gitignore  drizzle.config.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
nextjs/app/: layout.tsx  page.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(dashboard)/projects/: loading.tsx  page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx  page.tsx
nextjs/app/(dashboard)/templates/: page.tsx
nextjs/app/(landing)/: page.tsx
nextjs/components/: ConfigurePomptsStep.tsx  ConfigurePromptsStep.tsx  ConfigurePromptsStepHeader.tsx  ConfirmationModal.tsx  GenerateContentStep.tsx  GenerateStepBody.tsx  GenerateStepHeader.tsx  ProjectList.tsx  PromptContainerCard.tsx  PromptEditorDialog.tsx  PromptList.tsx  Sidebar.tsx  SidebarNav.tsx  SidebarToggle.tsx  SubscriptionManager.tsx  TemplateDetailBody.tsx  TemplateDetailHeader.tsx  TemplateDetailView.tsx  TemplateList.tsx  TemplateSelectionPopup.tsx  UserProfileSection.tsx
nextjs/components/project-detail/: ProjectDetailHeader.tsx  ProjectDetailStepper.tsx  ProjectDetailView.tsx
nextjs/components/upload-step/: ManageUploadStep.tsx  UploadStepBody.tsx  UploadStepHeader.tsx
nextjs/lib/: constants.ts  stripe.ts
nextjs/server/: mutations.ts  queries.ts
nextjs/server/db/: schema.ts
nextjs/utils/: formatFileTokens.ts  timeUtils.ts  token-helper.ts
(+21 files in other folders)
