[project]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "pcwhite",email = "philupthecup87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.13.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "openai (>=2.2.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "asset_processing_service", from = "src"}]

[tool.poetry.scripts]  # This is the entry point for the service
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
